@@ -61,6 +61,7 @@ application/x-gzip	[ARCHIVE]
 application/x-bzip	[ARCHIVE]
 application/x-tar	[ARCHIVE]
 application/x-stuffit	[ARCHIVE]
+application/x-opc+zip	[ARCHIVE]
 
 
 text/javascript application/x-javascript application/x-ecmascript text/ecmascript	[EXECUTABLE]
@@ -78,3 +79,22 @@ application/vnd.ms-excel	[OFFICE]
 application/vnd.ms-powerpoint	[OFFICE]
 application/x-director		[OFFICE]
 text/rtf			[OFFICE]
+
+application/vnd.openxmlformats-officedocument.wordprocessingml.document 	[OFFICE]
+application/vnd.openxmlformats-officedocument.wordprocessingml.template		[OFFICE]
+application/vnd.ms-word.document.macroEnabled.12 				[OFFICE]
+application/vnd.ms-word.template.macroEnabled.12				[OFFICE]
+application/vnd.openxmlformats-officedocument.presentationml.template		[OFFICE]
+application/vnd.openxmlformats-officedocument.presentationml.slideshow		[OFFICE]
+application/vnd.openxmlformats-officedocument.presentationml.presentation	[OFFICE]
+application/vnd.ms-powerpoint.addin.macroEnabled.12				[OFFICE]
+application/vnd.ms-powerpoint.presentation.macroEnabled.12			[OFFICE]
+application/vnd.ms-powerpoint.presentation.macroEnabled.12			[OFFICE]
+application/vnd.ms-powerpoint.slideshow.macroEnabled.12				[OFFICE]
+application/vnd.openxmlformats-officedocument.spreadsheetml.sheet		[OFFICE]
+application/vnd.openxmlformats-officedocument.spreadsheetml.template		[OFFICE]
+application/vnd.ms-excel.sheet.macroEnabled.12					[OFFICE]
+application/vnd.ms-excel.template.macroEnabled.12				[OFFICE]
+application/vnd.ms-excel.addin.macroEnabled.12					[OFFICE]
+application/vnd.ms-excel.sheet.binary.macroEnabled.12				[OFFICE]
+
